src/index.css
:root {
  --primary: #9a2729;
  --light: #c8cfd6;
  --dark: #000102;
  text-align: center;
  width: 100%;
  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
}

body {
  background-color: rgb(1, 0, 8);
}

/*** Navbar ***/
.navbar {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  padding: 35px 0;
  font-size: 20px;
  background-color: rgb(1, 0, 8); 
  height: 110px;
  width: 100%;
  position: fixed;
  z-index: 1;
  top: 0;
  left: 0;
}

.navbar-name {
  color: var(--primary);
  font-size: 60px;
  padding-left: 60px;
  text-align: left;
  font-style: italic;
}

.nav-sections a {
  color: var(--light);
  padding: 35px;
  text-decoration: none;
}

/*** About Section ***/
#about {
  padding-top: 200px;
  color: var(--light);
}

.aboutme {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  margin: 10px;
  padding: 50px;
  color: var(--light);
}

.aboutme p {
  width: 50%;
  padding-right: 50px;
}

.profile {
  width: 600px;
  height: 600px;
  position: relative;
  overflow: hidden;
  border-radius: 50%;
}

.profilepic {
  display: inline;
  margin: 0 auto;
  margin-left: -30%;
  height: 100%;
  width: auto;
}

.animate__slideInLeft {
  animation-name: slideInLeft;
  animation-duration: 2s;
}

.animate__slideInRight {
  animation-name: slideInRight;
  animation-duration: 2s;
}

/*** Section Title ***/
.section-title {
  position: relative;
  display: inline-block;
  margin: 50px;
  color: var(--light);
}

.section-title::before {
  position: absolute;
  content: "";
  width: 50px;
  height: 3px;
  top: 50%;
  left: -65px;
  margin-top: -1px;
  background: var(--primary);
}

.section-title::after {
  position: absolute;
  content: "";
  width: 50px;
  height: 3px;
  top: 50%;
  right: -65px;
  margin-top: -1px;
  background: var(--primary);
}

.section-title.text-start::before,
.section-title.text-end::after {
  display: none;
}

/*** Projects ***/
.project-item {
  box-shadow: 0 0 45px rgba(228, 28, 178, 0.08);
  height: calc(100% - 38px);
  transition: 0.5s;
}

.project-item img {
  transition: 0.5s;
}

.project-container {
  height: 100%;
}

.project-item {
  border-radius: 38px 38px 0 0;
  padding-bottom: 100px;
  display: flex;
  flex-direction: row;
  justify-content: center;
}

@keyframes fadeIn {
  from {
    opacity: 0;
    transform: translateY(50px);
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
}

.animate__fadeIn {
  animation-name: fadeIn;
  animation-duration: 5s;
}

.project-carousel {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  flex-wrap: wrap;
}

.projects .img-fluid {
  height: 600px;
  width: 600px;
}

.project-info {
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
  padding-left: 80px;
  width: 500px;
}

.description {
  height: auto;
  color: var(--light);
  padding: 20px;
  font-size: 25px;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
}

.description:hover {
  background-image: linear-gradient(
    to right,
    var(--dark),
    var(--primary) 50%,
    var(--primary)
  );
  background-size: 200% 100%;
  background-position: -100%;
  color: var(--dark);
  transition: 0.5s;
}

.label {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  align-items: center;
  font-weight: bold;
  margin-top: 10px;
  margin-bottom: 20px;
}

.deployed {
  color: var(--light);
  font-size: 30px;
  text-decoration: none;
}

.deployed:hover {
  color: var(--primary);
  transition: 0.5s;
}

.tinyLogo {
  height: 75px;
  width: 75px;
  background-color: var(--light);
}

.appsUsed {
  color: var(--primary);
  font-size: 20px;
  font-style: italic;
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  padding-top: 20px;
}

/***  Skills ***/
.credentials {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  height: 100px;
  padding: 80px;
}

.resume {
  color: var(--primary);
  font-size: 35px;
  font-style: italic;
  border: 3px solid var(--primary);
  border-radius: 5%;
  height: 100px;
  width: 300px;
  text-decoration: none;
  margin-right: 60px;
  padding-top: 40px;
}

.animate__rotateIn img {
  animation-name: flip;
  animation-duration: 1s;
  height: 200px;
  width: 200px;
  padding: 20px;
}

.carousel {
  margin-top: 20px;
  width: 100%;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
}

.skills {
  padding: 50px;
}

.skillIcon {
  height: 100px;
  width: 100px;
}

.skillName {
  color: var(--primary);
  font-size: 20px;
}

/*** Contact ***/
.social {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  height: 200px;
  width: 400px;
  margin: 0 auto;
  background-color: var(--primary);
  border-radius: 5%;
}

.social img {
  height: 70px;
  width: 70px;
  padding: 10px;
}

